kubernetes/applications/outline/outline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: outline
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/instance: outline
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app.kubernetes.io/name: outline
      app.kubernetes.io/instance: outline
  template:
    metadata:
      labels:
        app.kubernetes.io/name: outline
        app.kubernetes.io/instance: outline
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: outline-svc-acct
      containers:
        - name: outline
          image: outlinewiki/outline:1.6.1
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1001
            runAsGroup: 1001
          resources:
            limits:
              ephemeral-storage: 8Gi
              memory: 2Gi
            requests:
              cpu: 100m
              ephemeral-storage: 8Gi
              memory: 1Gi
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /_health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /_health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 5
          volumeMounts:
            - name: outline-data
              mountPath: /var/lib/outline/data
      volumes:
        - name: outline-data
          persistentVolumeClaim:
            claimName: outline-data
