kubernetes/applications/outline/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline-svc
  namespace: outline
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/instance: outline
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: http
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: outline
    app.kubernetes.io/instance: outline
