kubernetes/applications/outline/outline/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline-http-route
  namespace: outline
  annotations:
    gethomepage.dev/description: Our own knowledge base
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: https://raw.githubusercontent.com/outline/outline/refs/heads/main/public/images/favicon-32.png
    gethomepage.dev/name: Outline
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=outline"
    gethomepage.dev/href: "https://notes.mcmumf.dev"
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/instance: outline
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
  hostnames:
    - "notes.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: outline-svc
          port: 3000
