kubernetes/applications/outline/outline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline-ingress
  namespace: outline
  annotations:
    gethomepage.dev/description: Our own knowledge base
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: https://raw.githubusercontent.com/outline/outline/refs/heads/main/public/images/favicon-32.png
    gethomepage.dev/name: Outline
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=outline"
    gethomepage.dev/href: "https://notes.mcmumf.dev"
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/instance: outline
spec:
  ingressClassName: cilium
  rules:
    - host: notes.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline-svc
                port:
                  number: 3000
